--- a/Makefile.in
+++ b/Makefile.in
@@ -111,8 +111,8 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
 CONFIG_CLEAN_FILES = 
-DIST_COMMON =  README ./stamp-h.in ABOUT-NLS COPYING ChangeLog INSTALL \
-Makefile.am Makefile.in TODO acconfig.h aclocal.m4 config.guess \
+DIST_COMMON =  README ./stamp-h.in ABOUT-NLS AUTHORS COPYING ChangeLog \
+INSTALL Makefile.am Makefile.in TODO acconfig.h aclocal.m4 config.guess \
 config.h.in config.sub configure configure.in install-sh missing \
 mkinstalldirs
 
