--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
 Source: creatures-sprites
 Section: graphics
 Priority: optional
-Build-Depends: debhelper (>=2.0), libc16-dev (>0.2), libgimp1.2-dev (>= 1.2.0)
+Build-Depends: debhelper (>=2.0), libc16-dev (>0.3), libgimp1.2-dev (>= 1.2.0)
 Maintainer: Tina Hirsch <tehirsch@nexgo.de>
 Standards-Version: 3.0.1
 
 Package: creatures-sprites
 Architecture: any
 Depends: gimp1.2 (>= 1.2.0), ${shlibs:Depends}
-Description: .A plugin to load and save any image format of Creatures
+Description: .A plugin to load and save any image format of Creatures series 
  .
- Support currently saving and loading of blk images.
+ Supports currently blk/c16/s16
  homepage: http://c3-ds-tools.sf.net
