Ready for first release (0.2.0). Added windows related files.

--- a/Makefile.g95
+++ b/Makefile.g95
@@ -1,26 +1,12 @@
-# Programm to 'clean' after compilation
-# probably 'del' for windows
+# Makefile for Creatures Sprites Gimp-Plugin
+# for Mingw32/Cygwin
 #
-export RM=rm -f
 
-#
-# prefix is the gimp installationpath and plugindir the
-# plugin directory of the gimp
-#
-DESTDIR=
-PREFIX=c:/Programme/GIMP
-PLUGINDIR=$(PREFIX)/plug-ins
-BINDIR=$(PREFIX)/bin
-PLUGIN_NAME = creatures-sprites
-LOCALEDIR = $(PREFIX)/locale
-DATADIR = $(PREFIX)/help
-
-
-LOCALSDIR = po
-SRCDIR = src
+include makeinc.g95
 
 all:
 	$(MAKE) -C $(SRCDIR) -f Makefile.g95 
+	msgfmt --verbose -o $(LOCALSDIR)/$(PLUGIN_NAME).mo $(LOCALSDIR)/de.po
 
 clean:
 	$(MAKE) -C $(SRCDIR) -f Makefile.g95 clean
@@ -28,7 +14,6 @@ clean:
 
 install: $(SRCDIR)/*.c
 	$(MAKE) -C $(SRCDIR) -f Makefile.g95 install
-	msgfmt --verbose -o $(LOCALSDIR)/$(PLUGIN_NAME).mo $(LOCALSDIR)/de.po
 	cp $(LOCALSDIR)/$(PLUGIN_NAME).mo $(LOCALEDIR)/de/LC_MESSAGES
 
 .PHONY: clean
