--- a/configure.in
+++ b/configure.in
@@ -1,44 +1,42 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(configure.in)
+AC_PREREQ(2.54)
+
+dnl Name your plug-in here
+m4_define([plugin_name], [creature-sprites])
+
+dnl These three define the plug-in version number
+m4_define([plugin_major_version], [1])
+m4_define([plugin_minor_version], [3])
+m4_define([plugin_micro_version], [0])
+
+m4_define([plugin_version],
+          [plugin_major_version.plugin_minor_version.plugin_micro_version])
+
+AC_INIT([plugin_name], [plugin_version])
+
+AC_DEFINE(PLUGIN_NAME, PACKAGE_NAME, [Plug-In name])
+AC_DEFINE(PLUGIN_VERSION, PACKAGE_VERSION, [Plug-In version])
+
+AC_DEFINE(PLUGIN_MAJOR_VERSION, plugin_major_version, [Plug-In major version])
+AC_DEFINE(PLUGIN_MINOR_VERSION, plugin_minor_version, [Plug-In minor version])
+AC_DEFINE(PLUGIN_MICRO_VERSION, plugin_micro_version, [Plug-In micro version])
+
+AC_CONFIG_SRCDIR([src/blkimage.c])
 AM_CONFIG_HEADER(config.h)
 
-PLUGIN_MAJOR_VERSION=1
-PLUGIN_MINOR_VERSION=2
-PLUGIN_MICRO_VERSION=0
-PLUGIN_VERSION=$PLUGIN_MAJOR_VERSION.$PLUGIN_MINOR_VERSION.$PLUGIN_MICRO_VERSION
-
-VERSION=$PLUGIN_VERSION
-
-PLUGIN_NAME=creatures-sprites
-
-AM_INIT_AUTOMAKE($PLUGIN_NAME, $VERSION)
+AM_INIT_AUTOMAKE(no-define)
 
 AC_ISC_POSIX
 AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 
+
 ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
 
 AM_MAINTAINER_MODE
 
-AM_PATH_GTK(1.2.8, ,
-            AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))
-
-AM_PATH_GIMP(1.2.1, ,
-            AC_MSG_ERROR(Cannot find GIMP: Is gimptool in path?))
-
-dnl For Debian, all directories must be expressed in terms of prefix
-GIMP_PLUGIN_DIR=`gimptool --gimpplugindir | sed -e "s/$( gimptool --prefix | sed 's/\//\\\\\\//g')/\$\{prefix\}/"`
-
-dnl Add the languages which your application supports here.
-ALL_LINGUAS="de"
-AM_GNU_GETTEXT
-
-LOCALEDIR='${prefix}/${DATADIRNAME}/locale'
-
-DATADIR='${prefix}/${DATADIRNAME}/${PLUGIN_NAME}'
 
 dnl Use -Wall if we have gcc.
 changequote(,)dnl
@@ -50,24 +48,75 @@ if test "x$GCC" = "xyes"; then
 fi
 changequote([,])dnl
 
-CPPFLAGS="$CPPFLAGS -DGTK_DISABLE_COMPAT_H"
 
-AC_SUBST(PLUGIN_MAJOR_VERSION)
-AC_SUBST(PLUGIN_MINOR_VERSION)
-AC_SUBST(PLUGIN_MICRO_VERSION)
-AC_SUBST(PLUGIN_VERSION)
+GIMP_REQUIRED_VERSION=2.2.0
 
-AC_SUBST(PLUGIN_NAME)
+PKG_CHECK_MODULES(GIMP,
+  gimp-2.0 >= $GIMP_REQUIRED_VERSION gimpui-2.0 >= $GIMP_REQUIRED_VERSION)
+
+AC_SUBST(GIMP_CFLAGS)
+AC_SUBST(GIMP_LIBS)
+
+GIMP_LIBDIR=`$PKG_CONFIG --variable=gimplibdir gimp-2.0`
+AC_SUBST(GIMP_LIBDIR)
+
+
+dnl i18n stuff
+
+GETTEXT_PACKAGE=gimp20-plugin-template
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
+				    [The gettext translation domain.])
+
+dnl Add the languages which your application supports here.
+ALL_LINGUAS="de"
+
+AC_PROG_INTLTOOL
+AM_GLIB_GNU_GETTEXT
+
+AC_CHECK_FUNCS(bind_textdomain_codeset)
+
+LOCALEDIR='${datadir}/locale'
+DATADIR='${datadir}/plugin_name'
 
 AC_SUBST(LOCALEDIR)
 AC_SUBST(DATADIR)
 
-AC_OUTPUT([
+
+AC_MSG_CHECKING([if GTK+ is version 2.7.0 or newer])
+if $PKG_CONFIG --atleast-version=2.7.0 gtk+-2.0; then
+  have_gtk_2_7=yes
+else
+  have_gtk_2_7=no
+fi
+AC_MSG_RESULT($have_gtk_2_7)
+
+if test "x$have_gtk_2_7" != "xyes"; then
+  CPPFLAGS="$CPPFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
+fi
+
+
+AC_MSG_CHECKING([if GIMP is version 2.3.0 or newer])
+if $PKG_CONFIG --atleast-version=2.3.0 gimp-2.0; then
+  have_gimp_2_3=yes
+else
+  have_gimp_2_3=no
+fi
+AC_MSG_RESULT($have_gimp_2_3)
+
+if test "x$have_gimp_2_3" != "xyes"; then
+  CPPFLAGS="$CPPFLAGS -DGIMP_DISABLE_DEPRECATED"
+fi
+
+
+
+AC_CONFIG_FILES([
 Makefile
 src/Makefile
-intl/Makefile
 po/Makefile.in
 help/Makefile
-help/images/Makefile
 help/C/Makefile
+help/images/Makefile
 ])
+
+AC_OUTPUT
